# MRI-CUDA

./: .gitignore  CMakeLists.txt  example-data.sh  exampleRun.sh  install.sh  readme.md  run.sh
src/: main.cpp  main.cu  utils.cpp  utils.h
src/fft/: fft-cuda.cu  fft-cuda.cuh
